# Q1_26_Accelerate_Pratham

./: README.md
escrow-litesvm/: Anchor.toml  README.md  package.json
escrow-litesvm/programs/anchor-escrow/: Cargo.toml
escrow-litesvm/programs/anchor-escrow/src/: lib.rs
generic-storage/: Cargo.toml  README.md
generic-storage/src/: lib.rs
gpt_oracle_mb_tuktuk/: Anchor.toml  README.md  check-oracle.js  check-oracle.ts  fetch-logs.ts  package.json  query-task.ts
gpt_oracle_mb_tuktuk/programs/gpt_oracle_mb_tuktuk/: Cargo.toml
gpt_oracle_mb_tuktuk/programs/gpt_oracle_mb_tuktuk/src/: lib.rs  state.rs
gpt_oracle_mb_tuktuk/tests/: gpt-oracle-mb-tuktuk.ts
magicblock-er-example/: README.md  package.json
magicblock-er-example/programs/er-state-account/src/: lib.rs
magicblock-er-example/tests/: er-state-account.ts
persistent-todos/: Cargo.toml  README.md
transfer-enabled-vault/: Anchor.toml  README.md  test_meta
transfer-enabled-vault/programs/transfer-enabled-vault/: Cargo.toml
transfer-enabled-vault/programs/transfer-enabled-vault/src/: lib.rs
tuktuk-vrf/: Anchor.toml  README.md  package.json
tuktuk-vrf/tests/: cron-job.ts  er-state-account.ts
whitelist-transfer-hook/: Anchor.toml  README.md
whitelist-transfer-hook/programs/whitelist-transfer-hook/: Cargo.toml
whitelist-transfer-hook/programs/whitelist-transfer-hook/src/: error.rs  lib.rs
whitelist-transfer-hook/programs/whitelist-transfer-hook/src/instructions/: mod.rs  transfer_hook.rs
whitelist-transfer-hook/tests/: whitelist-transfer-hook.ts
(+22 files in other folders)
